--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
             <a href="#mainContent" class="skip">Skip to Content</a>
 
     <div class="epLogo">
-<a href="{{site.baseurl}}/home" title="Evolved Perception LLC">
+<a href="{{site.baseurl}}" title="Evolved Perception LLC">
     <img height="90" width="250" alt="Evolved Perception LLC logo" src="{{ site.baseurl }}/images/ep/evolvedPerceptionLogo.svg"/>
 </a>
     </div>
