--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="page-footer">
+<p class="top-link"><a href="#top">return to top</a></p>
 <p>&copy; {{ 'now' | date: "%Y" }} Jacki Jorgensen - All Rights Reserved<br />
 <a href="{{site.baseurl}}/privacy-policy" title="privacy policy" class="linkPadding">Privacy Policy</a>
 </p>
