--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,6 @@
     
   <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
 
-  <script src="{{ site.baseurl }}/scripts/modernizr.custom.js"></script>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -50,5 +49,12 @@
 	{{content}}
     
     {% include footer.html %}
+    
+  <script src="{{ site.baseurl }}/scripts/modernizr.custom.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js"></script>
+    
+    <script src="{{ site.baseurl }}/scripts/ep.js"></script>
+
 </body>
 </html>
