cleaning up fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,7 @@
     <link rel="preconnect" href="https://ajax.aspnetcdn.com" crossorigin />
     <link rel="preconnect" href="@UrlWriter.GetImageCdnUrl("", true, true)" crossorigin />
 	
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Kristi|Merriweather|Montserrat|Ruthie" rel="stylesheet"> 
-
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Lora" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet"> 
     
   <title>{{ site.title }}{% if page.title %} : {{ page.title }}{% endif %}</title> 
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
